# spotting-the-unseen

./: .gitignore  README.md
archive/task2_dataset_alteration/: blur_batch_processing.py  noise_batch_processing.py  resolution_resizing_batch_processing.py
archive/task3_baseline_model_training_evaluation/: README.md
archive/task4a_reduced_resolution_evaluation/: README.md
archive/task4b_blurry_image_evaluation/: README.md
archive/task4c_color_mismatch_evaluation/: README.md
archive/task4d_spliced_boundary_evaluation/: README.md
data/celeb_df/: metadata.json
datasets/: README.md
models/RECCE/: .gitignore  README.md  pyproject.toml  test.py  train_and_evaluate.py  train_single.py
models/RECCE/config/: __init__.py
models/RECCE/config/dataset/: dataset_config.py  dataset_full.yml  dataset_paths.yml  dataset_test.yml
models/RECCE/config/model/: Recce.yml  Recce_test.yml
models/RECCE/dataset/: __init__.py  generic_dataset.py
models/RECCE/src/recce/: __init__.py
models/RECCE/trainer/: __init__.py  single_device_trainer.py
preprocess/: README.md  add_alterations.py  extract_face_images.py  split_altered_dataset.py
split-data/: split.py
task1_data_acquisition_preprocessing/: README.md  filter_frontal.py  zip_files.py
task2_dataset_alteration/: README.md  blur_batch_processing.py  color_mismatch_batch_processing.py  noise_batch_processing.py  resolution_resizing_batch_processing.py  splicing_boundaries_batch_processing.py  tempCodeRunnerFile.py
task4e_added_noise_evaluation/: README.md
website/: .prettierrc  package-lock.json  package.json
(+114 files in other folders)
