[project]
name = "recce"
version = "0.1.0"
description = "End-to-End Reconstruction-Classification Learning for Face Forgery Detection"
authors = [
    { name = "Anne Sulit", email = "92159716+axsulit@users.noreply.github.com" }
]
dependencies = [
    "torch>=1.7.1",
    "torchvision>=0.8.2",
    "albumentations>=1.0.3",
    "timm>=0.3.4",
    "tensorboardX>=2.1",
    "scikit-learn>=1.6.1",
    # for sklearn metrics
    "numpy>=1.19.0",
    "matplotlib>=3.10.3",
    "tqdm>=4.50.0",
    "pyyaml>=5.4.0",
    "opencv-python>=4.11.0.86",
    "tensorboard>=2.19.0",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recce"]
